
1.3.5 (unreleased)
------------------

- In plone.z3cform version 0.5.8 a major change was introduced that affects our
  product. By overwriting update() and contents() of FormWrapper, we enable
  support for versions >=0.5.8; with an ugly hack in contents(), we maintain
  support for versions <=0.5.7 (thomasw)
- Fixed broken doctest for changing the workflow, introduced in 1.3.3 (thomasw)

1.3.4 (2010-02-09)
------------------

- In the AvailableWorkflowTransitions vocabulary, return all available
  transitions of a workflow, not just those available for the canonical's
  state. The canonical might be published, while some translations are still
  private (thomasw)

1.3.3 (2010-01-27)
------------------

- Reworked workflow handling. Instead of only "publish", now all transactions
  available on the current object can be triggered (thomasw)
- "Translate this" now has an additional language field, so that only a subset
  of the available languages may be chosen (thomasw)
- Ran the pep8 script and fixed most issues (thomasw)


1.3.2 (2009-12-17)
------------------

- Bugfix in linguatools.css: missing closing bracket. Thanks for the
  heads-up, do3cc! (thomasw)

1.3.1 (2009-12-11)
------------------

- Be more relaxed with version pinning needed for plone.app.z3cform (thomasw)

1.3 (2009-11-29)
----------------

- Major revamp at Plone Conference 2009 sprint: moved from static BrowserView
  to z3c form; brushed up test coverage; clearer interface; more user-friendly,
  less typing necessary; easier to plug in new functionality (cillian, jcbrand,
  pilz, thomasw, Andreas Schmid)

1.2.5 (unreleased)
------------------

- make sure that lang is ascii when using it to create objectids. Otherwise we get an infinite recursion (pilz)
- D'oh another bug in "block portlets", this time in the status message (thomasw)
- better status reporting for translateThis; collection criteria are now also copied when